# GoogleTestSample

./: CMakeLists.txt  Suite1Tests.cpp  Suite2Tests.cpp  main.cpp
gmock/: CMakeLists.txt  README
